--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "Brad Dozier, Kate Lockhart, and Slayde Settle",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "bcryptjs": "^2.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.37.0"
+    "sequelize": "^4.37.0",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
